--- a/src/Face Detection/index.html
+++ b/src/Face Detection/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,6 +7,7 @@
     <script async src="js/opencv.js" onload="openCvReady();"></script>
     <script src="js/utils.js"></script>
 </head>
+
 <body>
     <video id="cam_input" height="480" width="640"></video>
     <canvas id="canvas_output"></canvas>
@@ -23,17 +25,24 @@ function openCvReady() {
         console.log("An error occurred! " + err);
     });
     let src = new cv.Mat(video.height, video.width, cv.CV_8UC4);
-    // let dst = new cv.Mat(video.height, video.width, cv.CV_8UC1);
-    let dst = src;
+    let dst = new cv.Mat(video.height, video.width, cv.CV_8UC1);
     let gray = new cv.Mat();
     let cap = new cv.VideoCapture(cam_input);
     let faces = new cv.RectVector();
-    let classifier = new cv.CascadeClassifier();
+    let eyes = new cv.RectVector();
+    let face_cascade = new cv.CascadeClassifier();
+    let eye_cascade = new cv.CascadeClassifier();
+    let eyeCascadeFile = 'haarcascade_eye.xml';
     let utils = new Utils('errorMessage');
     let faceCascadeFile = 'haarcascade_frontalface_default.xml'; // path to xml
     utils.createFileFromUrl(faceCascadeFile, faceCascadeFile, () => {
-    classifier.load(faceCascadeFile); // in the callback, load the cascade from file 
-});
+        face_cascade.load(faceCascadeFile); // in the callback, load the cascade from file 
+        utils.createFileFromUrl(eyeCascadeFile, eyeCascadeFile, () => {
+        eye_cascade.load(eyeCascadeFile); // in the callback, load the cascade from file 
+        });
+    });
+
+
     const FPS = 24;
     function processVideo() {
         let begin = Date.now();
@@ -41,7 +50,7 @@ function openCvReady() {
         src.copyTo(dst);
         cv.cvtColor(dst, gray, cv.COLOR_RGBA2GRAY, 0);
         try{
-            classifier.detectMultiScale(gray, faces, 1.1, 3, 0);
+            face_cascade.detectMultiScale(gray, faces, 1.1, 3, 0);
             console.log(faces.size());
         }catch(err){
             console.log(err);
@@ -51,8 +60,22 @@ function openCvReady() {
             let point1 = new cv.Point(face.x, face.y);
             let point2 = new cv.Point(face.x + face.width, face.y + face.height);
             cv.rectangle(dst, point1, point2, [255, 0, 0, 255]);
+
+            let roiGray = gray.roi(face);
+            let roiSrc = src.roi(face);
+            eye_cascade.detectMultiScale(roiGray, eyes);
+
+            for (let j = 0; j < eyes.size(); ++j) { //draw rectangle around each eye
+                let point1 = new cv.Point(eyes.get(j).x, eyes.get(j).y);
+                let point2 = new cv.Point(eyes.get(j).x + eyes.get(j).width,
+                    eyes.get(j).y + eyes.get(j).height);
+                cv.rectangle(roiSrc, point1, point2, [0, 255, 255, 255]);
+            }
+            roiGray.delete(); roiSrc.delete();
         }
-        cv.imshow("canvas_output", dst);
+        
+        cv.imshow("canvas_output", src); //show eyes in green box
+        // cv.imshow("canvas_output", dst); //show face in red box // not appearing
         // schedule next one.
         let delay = 1000/FPS - (Date.now() - begin);
         setTimeout(processVideo, delay);
@@ -62,4 +85,5 @@ setTimeout(processVideo, 0);
   };
 }
 </script>
+
 </html>
