added alert and calculated time spent looking at screen

--- a/src/Face Detection/index.html
+++ b/src/Face Detection/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opencv JS</title>
+    <link rel="stylesheet" href="style.css"> 
     <script async src="js/opencv.js" onload="openCvReady();"></script>
     <script src="js/utils.js"></script>
 </head>
 
 <body>
+    Time Elapsed: <div class="netra-time-passed"></div>
     <video id="cam_input" height="480" width="640"></video>
     <canvas id="canvas_output"></canvas>
 </body>
