changes with extension

--- a/src/Face Detection/index.html
+++ b/src/Face Detection/index.html
@@ -11,8 +11,9 @@
 
 <body>
     Time Elapsed: <div class="netra-time-passed"></div>
-    <video id="cam_input" height="480" width="640"></video>
-    <canvas id="canvas_output"></canvas>
+    <!-- To make these visible, go to style.css and remove visibility: hidden for video and canvas -->
+    <video class="netra-video" id="cam_input" height="480" width="640"></video>
+    <canvas class="netra-canvas" id="canvas_output"></canvas>
 </body>
 <script src="js/main.js"></script>
 </html>
