--- a/src/Face Detection/index.html
+++ b/src/Face Detection/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Opencv JS</title>
+    <title>Netra</title>
     <link rel="stylesheet" href="style.css"> 
     <script async src="js/opencv.js" onload="openCvReady();"></script>
     <script src="js/utils.js"></script>
