added ppt and recent code

--- a/src/Face Detection/index.html
+++ b/src/Face Detection/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    Time Elapsed: <div class="netra-time-passed"></div>
+    <div class="timer"><span>Time you saw the screen: </span><img src="./js/clock.gif" width="45px"/><div class="netra-time-passed"></div></div>
     <!-- To make these visible, go to style.css and remove visibility: hidden for video and canvas -->
-    <video class="netra-video" id="cam_input" height="480" width="640"></video>
     <canvas class="netra-canvas" id="canvas_output"></canvas>
+    <video class="netra-video" id="cam_input" height="480" width="640"></video>
 </body>
 <script src="js/main.js"></script>
 </html>
